--- a/alpha/event/static/styles/searchpad/popup.css
+++ b/alpha/event/static/styles/searchpad/popup.css
@@ -100,7 +100,7 @@
     margin-top: 7px;
 }
 
-.searchpad-event-wrapper .show-day-description {
+.searchpad-event-wrapper .description {
     border: 1px solid #c6c6c6;
     padding: 3px 13px;
     color: #000000;
