--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -116,7 +116,7 @@
                                             </td>
                                             <td class="with-right-padding">
                                                 <div class="relative-wrapper">
-                                                    <a href="javascript:void()" class="action-in-the-loop">In the Loop</a>
+                                                    <a href="javascript:void(0);" class="action-in-the-loop">In the Loop</a>
                                                     {% in_the_loop_popup event %}
                                                 </div>
                                             </td>
@@ -131,7 +131,7 @@
                                     </table>
                                 </div>
 
-                                <div class="social-buttons">
+                                <div class="social-buttons" data-id="social_buttons_cell">
                                     <!-- AddThis Button BEGIN -->
                                     <div class="addthis_toolbox addthis_default_style addthis_16x16_style">
                                     <a class="addthis_button_facebook"></a>
