--- a/alpha/event/templates/events/_searchpad_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_datetime_menu.html
@@ -52,7 +52,10 @@
                 <div class="jump-popup__time-cell">
                     <div class="jump-popup__legend-wrapper">
                         <div class="checkbox jump-popup__checkbox">
-                            <input id="startTimeJumpToDateCheckbox" type="checkbox" class="start-time-checkbox">
+                            <input id="startTimeJumpToDateCheckbox"
+                                   type="checkbox"
+                                   class="start-time-checkbox"
+                                   autocomplete="off">
                             <label for="startTimeJumpToDateCheckbox"> </label>
                             <span class="jump-popup__legend">Start Time</span>
                         </div>
@@ -100,7 +103,10 @@
                 <div class="jump-popup__time-cell">
                     <div class="jump-popup__legend-wrapper">
                         <div class="checkbox jump-popup__checkbox">
-                            <input id="endTimeJumpToDateCheckbox" type="checkbox" class="end-time-checkbox">
+                            <input id="endTimeJumpToDateCheckbox"
+                                   type="checkbox"
+                                   class="end-time-checkbox"
+                                   autocomplete="off">
                             <label for="endTimeJumpToDateCheckbox"></label>
                             <span class="jump-popup__legend">End Time</span>
                         </div>
