--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -241,7 +241,7 @@
                                             {% remind_me_popup event %}
                                         </div>
                                         <div class="relative-wrapper">
-                                            <a href="javascript:void()" class="action-in-the-loop">In the Loop</a>
+                                            <a href="javascript:void(0);" class="action-in-the-loop">In the Loop</a>
                                             {% in_the_loop_popup event %}
                                         </div>
                                         <div class="relative-wrapper">
