--- a/alpha/event/templates/events/detail_page/similar_events.html
+++ b/alpha/event/templates/events/detail_page/similar_events.html
@@ -3,7 +3,7 @@
 
 <div class="similar-events-wrapper">
     <header>
-        Similar Events
+        More Events
         <div>
             at {{ event.venue.name }}
         </div>
