fixing search pad issues

--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -66,7 +66,7 @@
                                         {% endif %}
                                     </div>
                                     {% if event.tickets %}
-                                        <a href="javascript:void()"  class="action-buy-tickets accented">
+                                        <a href="javascript:void(0);"  class="action-buy-tickets accented">
                                             Buy tickets
                                         </a>
                                         {% buy_tickets_popup event %}
