--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -81,6 +81,7 @@ a:hover{
     margin-top: 1px;
     border: 1px solid #c6c6c6;
     padding: 18px 13px;
+    overflow-x: hidden;
 }
 
 .primary-content .description * {
