bit event description style changing

--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -432,6 +432,7 @@ a:hover{
     color: #454545;
     font-size: 14px;
     margin-top: 18px;
+    overflow-x: hidden;
 }
 
 .primary-content .description * {
