Fix searhpad all events link and description

--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -4,7 +4,7 @@
 
 <div class="left-menu">
     <div class="all-events">
-        <a href="{% events_filter_url request eventsFilter function="tags" exclude="tag|datetime" %}" >Browse All Events</a>
+        <a href="{% events_filter_url request eventsFilter function="tags" exclude="tag|datetime" %}" class="ajax" >Browse All Events</a>
     </div>
 
     <div class="top10-tags">
