Change views to Impressions in admin interface

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
@@ -29,7 +29,7 @@
             <table class="profile-table" celpadding="0" cellspacing="0">
                 <tr>
                     <th>Event</th>
-                    <th>Views</th>
+                    <th>Impressions</th>
                     <th>Clicks</th>
                     <th>Owned by</th>
                     <th>From-To</th>
