--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -58,8 +58,7 @@
                 <tr>
                     <td>
                         <div class="account-avatar">
-                            <img class="mugshot" src="{{ profile.get_mugshot_url }}" alt="{% trans "
-                            Your mugshot " %}" />
+                            <img class="mugshot" src="{{ profile.get_mugshot_url }}" alt="{% trans "Your mugshot " %}" />
                         </div>
                     </td>
                     <td>
