Fix styles for ipad

--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -81,7 +81,7 @@ html.preview, body.preview {
     width:auto;    
     background: #022e52;
     border-bottom: 1px solid #5c768c;
-    width: 100%;
+    min-width: 1024px;
 }
 
 .primary-header .content {
@@ -120,6 +120,7 @@ html.preview, body.preview {
 .menu-header {
     background: #ecece9;
     border-bottom: 2px solid #b8b8b8;
+    min-width: 1024px
 }
 
 .menu-header .content {
@@ -488,7 +489,7 @@ table.schedule-bar-menu td.selected a {
 
 .footer-site-links
 {
-    width: 100%;
+    min-width: 1024px;
     width:auto;
     padding: 9px 10px 3px 10px;
     background:#022E52;
