Add margin to search for

--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -184,6 +184,7 @@ html.preview, body.preview {
     float: left;
     height: 25px;
     padding-top: 3px;
+    margin-left: 3px;
 }
 
 .location-wrapper .location-selection-wrapper,
