Use ads 300x600|300x250|300x100 always on home page

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -26,9 +26,9 @@
 {% block advertising %}
     <div>
         <div class="advertising-right-container">
-            {% advertising_home_group %}
+            {% advertising_group "300x600|300x250|300x100" %}
         </div>
-    </div>
+    </div>s
 {% endblock %}
 
 {% block featured %}
