--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -28,7 +28,7 @@
         <div class="advertising-right-container">
             {% advertising_group "300x600|300x250|300x100" %}
         </div>
-    </div>s
+    </div>
 {% endblock %}
 
 {% block featured %}
