Add phone to venue items in venues list

--- a/alpha/venues/templates/venues/venue_account_item.html
+++ b/alpha/venues/templates/venues/venue_account_item.html
@@ -20,5 +20,8 @@
             {% endif %}
             {{ venue_account.venue.city.name_std }}, {{ venue_account.venue.city.region.name_std|region_shortcut }}
         </div>
+        {% if venue_account.phone %}
+            <div class="phone">{{ venue_account.phone }}</div>
+        {% endif %}        
     </div>
 </a>
