--- a/alpha/event/static/styles/searchpad/popup.css
+++ b/alpha/event/static/styles/searchpad/popup.css
@@ -1,18 +1,21 @@
 .search-pad-popup {
     display: none;
     position: absolute;
-    top: 120px;
+    top: 0;
     width: 100%;
+    height: 100%;
     z-index: 12;
+    background: rgba(0, 0, 0, 0.5);
 }
 
-.search-pad-popup-content {
+.search-pad-popup-content {    
     width: 990px;
     padding: 10px;
     min-height: 612px;
     border: 4px solid #c6c6c6;
     background: #fdfcfc;
     margin: 0 auto;
+    margin-top: 120px;
 }
 
 .search-pad-menu, .search-pad-content, .search-pad-advertising {
@@ -99,13 +102,26 @@
 }
 
 .searchpad-event-wrapper .description {
+    position: relative;
     border: 1px solid #c6c6c6;
     padding: 3px 13px;
     color: #000000;
     margin-top: 7px;
-    overflow-x: hidden;
-    max-height: 175px;
+    overflow: hidden;
+    max-height: 175px;        
 }
+
+/*.searchpad-event-wrapper .description:after {
+    display: block;
+    content: "...";
+    position: absolute;    
+    bottom: 0px;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    font-size: 36px;    
+    color: #022e52;
+    text-align: center;
+}*/
 
 .search-pad-popup .searchpad-event-description {
     height: 190px;
