--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -81,28 +81,25 @@
                                                 {% endif %}
                                                 {% if event.event_type == "MULTIDAY" %}
                                                     {{event.first_occurrence.start_time|date:"D, N d"}} - {{event.last_occurrence.end_time|date:"D, N d"}}
-                                                {% endif %}
+                                                {% endif %}                                            
+                                            </div>
+                                            <div class="event-time-wrapper">
+                                                {{event.start_time|just_time|lower}} - {{event.end_time|just_time|lower}}
                                             </div>
                                             <div class="event-venue">
                                                 <span class="accented">{{ event.venue.name }}</span>
                                                 {% if event.venue.street %}
                                                     <span>
-                                                        {% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}{{ event.venue.street }}
+                                                        {% if event.venue.street_number %}
+                                                            {{ event.venue.street_number }} 
+                                                        {% endif %}
+                                                        {{ event.venue.street }} {{ event.venue.city.name_std }}, {{ event.venue.city.region.name_std|region_shortcut }}
                                                     </span>
                                                 {% endif %}
-                                                <div class="event-venue-name">
-                                                    {{ event.venue.city.name_std }}, {{ event.venue.city.region.name_std|region_shortcut }}
-                                                </div>
+                                                
+                                                    
                                             </div>
                                         </td>
-                                        {% if event.venue %}
-                                        <td>
-                                            <div class="venue_map_preview">
-                                                <img src="http://maps.googleapis.com/maps/api/staticmap?center={{ event.venue.location.y }},{{ event.venue.location.x }}&zoom=13&size=100x80&maptype=roadmap&markers=color:blue%7C{{ event.venue.location.y }},{{ event.venue.location.x }}&sensor=false">
-                                            </div>
-                                            <div id="venue_map" class="map"></div>
-                                        </td>
-                                        {% endif %}
                                     </tr>
                                 </table>
                             </div>
