footer margin correction

--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -127,7 +127,7 @@
             </div>
 
             <div class="footer-wrapper" data-no-turbolink>
-                <div class="footer-container">
+                <div class="footer-container top">
                     {% block advertising_footer %}{% endblock %}
                 </div>
             </div>
