--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -51,7 +51,6 @@ html.preview, body.preview {
     margin: 11px auto 0 auto;
     text-align:left;
     background: #e3e3e3;
-    padding-bottom: 10px;
 }
 
 .page-container.index {
@@ -477,11 +476,14 @@ table.schedule-bar-menu td.selected a {
     text-align:left;
 }
 
+.footer-container.top {
+    padding-top:9px;
+    padding-bottom:9px;
+}
+
 .footer-ads-wrapper
 {
     width:auto;
-    padding-top:10px;
-    padding-bottom:10px;
     text-align: center;
 }
 
