464 Make Featured not working in admin interface

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-setup-featured-event.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-setup-featured-event.html
@@ -29,6 +29,7 @@
                 <div class="errors" style="border:1px solid RED;border-radius:4px;">
                     <ul style="list-style-type: none;">
                         <li id="all-info">
+                            {{ form.errors }}
                             {% for error in form.non_field_errors %}
                                 <span class="error">{{ error }}</span>
                             {% endfor %}
