--- a/alpha/cityfusion_admin/templates/cf-admin/ads/admin-expired-advertising-list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/ads/admin-expired-advertising-list.html
@@ -20,8 +20,11 @@
         <div class="box visible options">
             <table class="tabs" cellpadding="0" cellspacing="0">
                 <tr>
+                    <td>
+                        <a href="{% url 'admin_advertising' %}"><span>Active Advertising List</span></a>
+                    </td>
                     <td class="current">
-                        <span>Advertising list</span>
+                        <span>Expired Ads</span>
                     </td>
                     <td>
                         <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
