--- a/alpha/cityfusion_admin/templates/cf-admin/ads/admin-advertising-review.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/ads/admin-advertising-review.html
@@ -18,7 +18,10 @@
             <table class="tabs" cellpadding="0" cellspacing="0">
                 <tr>
                     <td>
-                        <a href="{% url 'admin_advertising' %}"><span>Advertising list</span></a>
+                        <a href="{% url 'admin_advertising' %}"><span>Active Advertising List</span></a>
+                    </td>
+                    <td>
+                        <a href="{% url 'admin_expired_advertising' %}"><span>Expired Ads</span></a>
                     </td>
                     <td>
                         <a href="{% url 'admin_advertising_setup' %}"><span>Create new campaign</span></a>
