Improve account page layout

--- a/alpha/accounts/templates/userena/venue_accounts.html
+++ b/alpha/accounts/templates/userena/venue_accounts.html
@@ -6,11 +6,14 @@
     <ul>
         {% for venue_account in venue_accounts %}
             <li>
-                <a class="remove-button confirm" href="{% url 'unlink_venue_account_from_user_profile' venue_account_id=venue_account.id %}">
-                    <i class="icon-remove"></i>
-                </a>
                 <a class="mngp" href="{% url 'private_venue_account' slug=venue_account.slug %}">
                     {{ venue_account.venue.name }}
+                </a>
+                <a href="{% url 'unlink_venue_account_from_user_profile' venue_account_id=venue_account.id %}">
+                    Delete
+                </a> |
+                <a href="{% url 'account_set_context' context=venue_account.slug %}">
+                    Change User
                 </a>
             </li>
         {% endfor %}
